--- a/resume_mid_2015-5.5.2/css/styles.css
+++ b/resume_mid_2015-5.5.2/css/styles.css
@@ -145,7 +145,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 #home {
 	position: fixed;
-	background-color: transparent;
+	background-color: rgba(0,0,0,0.45);
 	z-index: 2;
 }
 
