--- a/violetaestudio_2015-5.5.2/css/styles.css
+++ b/violetaestudio_2015-5.5.2/css/styles.css
@@ -1,180 +1,158 @@
 /* Custom styles */
-
+/* Colors */
+/* Black */
+/* Almost white */
+/* Gray */
+/* Transluscent black */
+/* Transluscent white */
+/* Very light gray */
+/* Vibrant Violet */
+/* Vibrant Pink */
+/* Deep Purple */
+/* Mustard */
+/* Transluscent Bubble Gum 2 */
+/* Orange */
+/* Lime Green */
+/* Transluscent vibrant pink */
 /* Custom fonts */
-
 /* latin */
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 300;
-  src: local('Nunito-Light'), url(http://fonts.gstatic.com/s/nunito/v7/1TiHc9yag0wq3lDO9cw0vpBw1xU1rKptJj_0jans920.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
+  src: local("Nunito-Light"), url(http://fonts.gstatic.com/s/nunito/v7/1TiHc9yag0wq3lDO9cw0vpBw1xU1rKptJj_0jans920.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
 /* latin */
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 400;
-  src: local('Nunito-Regular'), url(http://fonts.gstatic.com/s/nunito/v7/6TbRXKWJjpj6V2v_WyRbMevvDin1pK8aKteLpeZ5c0A.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
+  src: local("Nunito-Regular"), url(http://fonts.gstatic.com/s/nunito/v7/6TbRXKWJjpj6V2v_WyRbMevvDin1pK8aKteLpeZ5c0A.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
 /* latin */
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
-  src: local('Nunito-Bold'), url(http://fonts.gstatic.com/s/nunito/v7/TttUCfJ272GBgSKaOaD7KpBw1xU1rKptJj_0jans920.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
+  src: local("Nunito-Bold"), url(http://fonts.gstatic.com/s/nunito/v7/TttUCfJ272GBgSKaOaD7KpBw1xU1rKptJj_0jans920.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
 html, button, input, select, textarea {
-    font-family: sans-serif;
-    font-family: 'Nunito', sans-serif;
-}
+  font-family: sans-serif;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300; }
 
 body {
-    margin: 0;
-    font-family: 'Nunito', sans-serif;
-}
+  margin: 0;
+  font-family: "Nunito", sans-serif;
+  font-weight: 300; }
 
 h1, h2, h3, h4, h5, h6, p {
-	font-family: 'Nunito', sans-serif;
-}
+  font-family: "Nunito", sans-serif;
+  font-weight: 300; }
 
 /* Overlay style */
 .overlay {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(148,0,211,0.9);
-	z-index: 3;
-}
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(153, 32, 144, 0.9);
+  z-index: 3; }
+  .overlay .overlay-close {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    overflow: hidden;
+    border: none;
+    background: url(../img/cross.png) no-repeat center center;
+    text-indent: 200%;
+    color: transparent;
+    outline: none;
+    z-index: 100; }
+  .overlay nav {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    height: 60%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%); }
+  .overlay ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    height: 100%;
+    position: relative; }
+    .overlay ul li {
+      display: block;
+      height: 20%;
+      height: calc(100% / 5);
+      min-height: 54px;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden; }
+      .overlay ul li a {
+        font-size: 54px;
+        font-weight: 300;
+        display: block;
+        color: #fafafa;
+        -webkit-transition: color 0.2s;
+        transition: color 0.2s; }
+        .overlay ul li a:hover, .overlay ul li a:focus {
+          color: #f0f0f0; }
 
 /* Overlay closing cross */
-.overlay .overlay-close {
-	width: 80px;
-	height: 80px;
-	position: absolute;
-	right: 20px;
-	top: 20px;
-	overflow: hidden;
-	border: none;
-	background: url(../img/cross.png) no-repeat center center;
-	text-indent: 200%;
-	color: transparent;
-	outline: none;
-	z-index: 100;
-}
-
 /* Menu style */
-.overlay nav {
-	text-align: center;
-	position: relative;
-	top: 50%;
-	height: 60%;
-	-webkit-transform: translateY(-50%);
-	transform: translateY(-50%);
-}
-
-.overlay ul {
-	list-style: none;
-	padding: 0;
-	margin: 0 auto;
-	display: inline-block;
-	height: 100%;
-	position: relative;
-}
-
-.overlay ul li {
-	display: block;
-	height: 20%;
-	height: calc(100% / 5);
-	min-height: 54px;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-}
-
-.overlay ul li a {
-	font-size: 54px;
-	font-weight: 300;
-	display: block;
-	color: #ffffff;
-	-webkit-transition: color 0.2s;
-	transition: color 0.2s;
-}
-
-.overlay ul li a:hover,
-.overlay ul li a:focus {
-	color: #f0f0f0;
-}
-
 /* Effects */
 .overlay-corner {
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transform: translateY(-50px) translateX(50px);
-	transform: translateY(-50px) translateX(50px);
-	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s, visibility 0s 0.5s;
-	transition: opacity 0.5s, transform 0.5s, visibility 0s 0.5s;
-}
-
-.overlay-corner.open {
-	opacity: 1;
-	visibility: visible;
-	-webkit-transform: translateY(0%);
-	transform: translateY(0%);
-	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
-	transition: opacity 0.5s, transform 0.5s;
-}
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-50px) translateX(50px);
+  transform: translateY(-50px) translateX(50px);
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s, visibility 0s 0.5s;
+  transition: opacity 0.5s, transform 0.5s, visibility 0s 0.5s; }
+  .overlay-corner.open {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s; }
 
 /* Foundation Customization*/
-
 .row {
-	max-width: 200rem;
-}
+  max-width: 200rem; }
 
 /* Spacings and alignments */
-
 .text-right {
-	text-align: right;
-}
+  text-align: right; }
 
 /* Custom divs */
 #intro, #about, #skills, #experience, #contact {
-	min-height: 100vh;
-}
+  min-height: 100vh; }
 
 #intro h2, #about h2, #skills h2, #experience h2 {
-	position: relative;
-	color: #FEFEFE;
-	padding-left: 0.5rem;
-}
+  position: relative;
+  color: #fafafa;
+  padding-left: 0.5rem; }
 
 #contact h2 {
-	padding-left: 0.5rem;
-}
+  padding-left: 0.5rem; }
 
 #home {
-	position: fixed;
-	background-color: rgba(0,0,0,0.45);
-	z-index: 2;
-}
-
-	#home p {
-		font-size: 2.75rem;
-		margin-bottom: 0;
-	}
-
-	#home h1, #home p {
-		color: #ffffff;
-		padding-left: 0.5rem;
-	}
-
-	#home #trigger-overlay {
-		cursor: pointer;
-	}
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.45);
+  z-index: 2; }
+  #home p {
+    font-size: 2.75rem;
+    margin-bottom: 0; }
+  #home h1, #home p {
+    color: #fafafa;
+    padding-left: 0.5rem; }
+  #home #trigger-overlay {
+    cursor: pointer; }
 
 .texture-overlay {
   position: absolute;
@@ -182,169 +160,160 @@ h1, h2, h3, h4, h5, h6, p {
   left: 0px;
   width: 100%;
   height: 100%;
-  background-image: url('../img/grid.png');
-}
+  background-image: url("../img/grid.png"); }
 
 .hero {
-    background: #E8E0DA url('../img/ux2.jpg') no-repeat center center;
-    background-size: cover;
-}
+  background: #E8E0DA url("../img/violet-hero-desktop-xlarge.jpg") no-repeat center center;
+  background-size: cover; }
 
-blockquote, blockquote p {
+blockquote {
   font-size: 2rem;
-  border-left: none;
-}
-
-	blockquote:before {
-		color: #000000;
-	    content: "\201C";
-	    display: inline-block;
-	    font-family: georgia;
-	    font-size: 4rem;
-	    vertical-align: middle;
-	}
-
-	blockquote:after {
-		color: #000000;
-	    content: "\201D";
-	    display: inline-block;
-	    font-family: georgia;
-	    font-size: 4rem;
-	    vertical-align: middle;
-	}
+  border-left: none; }
+  blockquote p {
+    font-size: 2rem;
+    border-left: none; }
+  blockquote:before {
+    color: black;
+    content: "\201C";
+    display: inline-block;
+    font-family: "Nunito", sans-serif;
+    font-size: 4rem;
+    vertical-align: middle; }
+  blockquote:after {
+    color: black;
+    content: "\201D";
+    display: inline-block;
+    font-family: "Nunito", sans-serif;
+    font-size: 4rem;
+    vertical-align: middle; }
 
 .ux-quote blockquote {
-	text-align: center;
-}
-
-	.ux-quote p {
-		text-align: right;
-	}
+  text-align: center; }
+.ux-quote p {
+  text-align: right; }
 
 #intro .me {
-	position: absolute;
-	top: 50%;
-	left: 4%;
-}
+  position: absolute;
+  top: 50%;
+  left: 4%; }
 
 .me h2 {
-	color: #ffffff;
-}
-
+  color: #fafafa; }
 .me button {
-	background-color: #ffffff;
-	color: rgb(255,76,99);
-	border: 2px solid #ffffff;
-	margin-right: 3rem;
-}
-
-	.me button:hover {
-		background-color: transparent;
-		color: #ffffff;
-		border: 2px solid rgb(255,76,99);
-	}
+  background-color: #fafafa;
+  color: #b80159;
+  border: 2px solid #fafafa;
+  margin-right: 3rem; }
+  .me button:hover {
+    background-color: transparent;
+    color: #fafafa;
+    border: 2px solid #b80159; }
 
 #about {
-	background-color: rgb(40,43,42);
-}
-
-#about .formation {
-	background: #FEFEFE url('../img/web.jpg') no-repeat center center;
-	background-size: cover;
-	min-height: 100vh;
-}
+  background-color: #282b2a; }
+  #about .formation {
+    background: #FEFEFE url("../img/web.jpg") no-repeat center center;
+    background-size: cover;
+    min-height: 100vh; }
 
 #skills {
-	position: relative;
-	background: #E8E0DA url('../img/ux.jpg') no-repeat center center fixed;
-    background-size: cover;
-}
+  position: relative;
+  background: #E8E0DA url("../img/ux.jpg") no-repeat center center fixed;
+  background-size: cover; }
 
 #experience {
-	position: relative;
-	background: #FEFEFE url('../img/ux1.jpg') no-repeat center center;
-	background-size: cover;
-}
-
-#experience .clients {
-
-}
+  position: relative;
+  background: #FEFEFE url("../img/ux1.jpg") no-repeat center center;
+  background-size: cover; }
 
 #contact {
-	background-color: #fefefe;
-}
+  background-color: #fefefe; }
 
 /* No Captcha recaptcha */
-
 button.success {
-	display: none;
-}
+  display: none; }
 
 /* Contact form styles */
+input[type="text"], input[type="email"] {
+  background-color: #404040;
+  opacity: 0.3;
+  font-size: 1.25rem;
+  padding: 1rem;
+  width: 100%;
+  -webkit-appearance: none;
+  margin: 0.3125rem 0;
+  border: none;
+  border-radius: 0;
+  transition: all .3s ease-in-out;
+  outline: 0; }
 
-input[type="text"], input[type="email"], textarea[type="text"] {
-	background-color: #404040;
-	opacity: 0.3;
-	font-size: 1.25rem;
-    padding: 1rem;
-    width: 100%;
-    -webkit-appearance: none;
-    margin: 0.3125rem 0;
-    border: none;
-    border-radius: 0;
-    transition: all .3s ease-in-out;
-    outline: 0;
-}
+textarea[type="text"] {
+  background-color: #404040;
+  opacity: 0.3;
+  font-size: 1.25rem;
+  padding: 1rem;
+  width: 100%;
+  -webkit-appearance: none;
+  margin: 0.3125rem 0;
+  border: none;
+  border-radius: 0;
+  transition: all .3s ease-in-out;
+  outline: 0;
+  min-height: 8rem; }
 
-	textarea[type="text"] {
-		min-height: 8rem;
-	}
+input[type="text"]:focus, input[type="email"]:focus {
+  opacity: 1;
+  border: none;
+  outline: 0;
+  background-color: #fefefe; }
 
-	input[type="text"]:focus, input[type="email"]:focus, textarea[type="text"]:focus {
-		opacity: 1;
-		border: none;
-		outline: 0;
-		background-color: #fefefe;
-	}
+textarea[type="text"]:focus {
+  opacity: 1;
+  border: none;
+  outline: 0;
+  background-color: #fefefe; }
 
-[data-abide] .error small.error, [data-abide] .error span.error, [data-abide] span.error, [data-abide] small.error {
+[data-abide] .error small.error, [data-abide] .error span.error {
   font-size: 1rem;
   font-style: italic;
   background: #8b1820;
-  color: #FFFFFF;
-}
+  color: darkviolet; }
+[data-abide] span.error, [data-abide] small.error {
+  font-size: 1rem;
+  font-style: italic;
+  background: #8b1820;
+  color: darkviolet; }
 
-.error label, .error label.error {
-  color: #8b1820;
-}
+.error label {
+  color: #8b1820; }
+  .error label.error {
+    color: #8b1820; }
 
 p.success {
-	font-size: 1.5rem;
-	color: rgb(255,76,99);
-	padding: 1rem;
-} 
+  font-size: 1.5rem;
+  color: #b80159;
+  padding: 1rem; }
 
-footer section p:last-child {
-	text-align: center;
-}
-
-footer p {
-	margin-bottom: 0;
-}
+footer {
+  padding-bottom: 0.5rem;
+  position: fixed;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.45); }
+  footer section p:last-child {
+    text-align: center; }
+  footer p {
+    margin-bottom: 0; }
 
 /* Share styles */
-
 .share {
-  /*max-width: 37.5rem;*/
-  height: 6.25rem;
+  margin-bottom: 0.5rem;
+  height: auto;
   margin: 0 auto;
   -webkit-filter: url("#goo");
-  filter: url("../index.html#goo");
-}
+  filter: url("../index.html#goo"); }
 
-.share-button,
-.share-toggle-button {
-  background-color: rgb(255,76,99) !important;
+.share-button, .share-toggle-button {
+  background-color: #9cbf50 !important;
   padding: 0;
   position: absolute;
   display: inline-block;
@@ -358,66 +327,49 @@ footer p {
   margin-top: -2.5rem;
   background: #cccccc;
   text-align: center;
-  color: #ffffff;
+  color: #fafafa;
   border: none;
-  outline: none;
-}
+  outline: none; }
 
-.share-button:hover,
-.share-toggle-button:hover {
-  color: #ffffff;
-}
+.share-button:hover, .share-toggle-button:hover {
+  color: #fafafa; }
 
 .share-button {
   font-size: 2rem;
   background: #737070;
   -webkit-transform: scale(0.95, 0.95);
   transform: scale(0.95, 0.95);
-  color: #222222;
-}
+  color: #222222; }
 
 a.share-button {
-  background-color: rgba(38,155,255,0.9) !important;
-  color: #ffffff;
-}
-
-a.share-button:hover, 
-a.share-button:focus {
-  color: #dfd7d7;
-}
+  background-color: rgba(184, 1, 89, 0.8) !important;
+  color: #fafafa; }
+  a.share-button:hover, a.share-button:focus {
+    color: #dfd7d7; }
 
 .share-toggle-button {
   z-index: 9;
   background: #666666;
-  font-size: 1.75rem;
-}
+  font-size: 1.75rem; }
 
 .share-items {
   list-style-type: none;
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 .share-item {
-  display: inline-block;
-}
+  display: inline-block; }
 
 @media only screen and (max-width: 47.9375em) {
-	#home h1, #home p{
-		font-size: 1.125rem;
-	}
-
-	#home h1 {
-		padding-top: 0.5rem;
-	}
-} 
-
+  #home h1, #home p {
+    font-size: 1.125rem; }
+  #home h1 {
+    padding-top: 0.5rem; } }
 @media screen and (max-width: 30.5em) {
-	.overlay nav {
-		height: 70%;
-		font-size: 34px;
-	}
-	.overlay ul li {
-		min-height: 34px;
-	}
-}
+  .overlay nav {
+    height: 70%;
+    font-size: 34px; }
+  .overlay ul li {
+    min-height: 34px; } }
+
+/*# sourceMappingURL=styles.css.map */
