Changes in layout

--- a/violetaestudio_2015-5.5.2/css/styles.css
+++ b/violetaestudio_2015-5.5.2/css/styles.css
@@ -135,11 +135,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 #intro h2, #about h2, #skills h2, #experience h2 {
   position: relative;
-  color: #fafafa;
-  padding-left: 0.5rem; }
-
-#contact h2 {
-  padding-left: 0.5rem; }
+  color: #fafafa; }
 
 #home {
   position: fixed;
@@ -194,7 +190,7 @@ blockquote {
 
 #intro .me {
   position: absolute;
-  top: 50%;
+  top: 68%;
   left: 4%; }
 
 .me h2 {
