Changes and improvements

--- a/violetaestudio_2015-5.5.2/css/styles.scss
+++ b/violetaestudio_2015-5.5.2/css/styles.scss
@@ -218,7 +218,7 @@ blockquote {
 #about {
   background-color: rgb(40, 43, 42);
   .formation {
-    background: #FEFEFE url('../img/web.jpg') no-repeat center center;
+    background: #FEFEFE url('../img/muestra.jpg') no-repeat center center;
     background-size: cover;
     min-height: 100vh;
   }
@@ -226,13 +226,13 @@ blockquote {
 
 #skills {
   position: relative;
-  background: #E8E0DA url('../img/ux.jpg') no-repeat center center fixed;
+  background: #E8E0DA url('../img/duis.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
 #experience {
   position: relative;
-  background: #FEFEFE url('../img/ux1.jpg') no-repeat center center;
+  background: #FEFEFE url('../img/violet-hero.jpg') no-repeat center center;
   background-size: cover;
   .clients {}
 }
