--- a/violetaestudio_2015-5.5.2/css/styles.scss
+++ b/violetaestudio_2015-5.5.2/css/styles.scss
@@ -135,6 +135,7 @@ h1, h2, h3, h4, h5, h6, p {
   position: fixed;
   background-color: $main-color-4;
   z-index: 2;
+  box-shadow: 0 0 7px rgba(0,0,0,0.3);
   p {
     font-size: 2.75rem;
     margin-bottom: 0;
@@ -338,7 +339,8 @@ footer {
   padding-bottom: 0.5rem;
   position: fixed;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.45);
+  background-color: rgba(255, 255, 255, 0.85);
+  box-shadow: 0 0 7px rgba(0,0,0,0.3);
   p {
     margin-bottom: 0;
   }
