Added lighter color palette

--- a/violetaestudio_2015-5.5.2/css/colors.scss
+++ b/violetaestudio_2015-5.5.2/css/colors.scss
@@ -7,7 +7,7 @@ $main-color-4: rgba(0, 0, 0, 0.45); /* Transluscent black */
 $main-color-5: rgba(255, 255, 255, 0.9); /* Transluscent white */
 $main-color-6: rgb(240, 240, 240); /* Very light gray */
 
-$primary-color-1: rgb(148, 0, 211); /* Vibrant Violet */
+$primary-color-1: #b30000; /* Nice red for errors */
 $primary-color-2: rgb(184, 1, 89); /* Vibrant Pink */
 $primary-color-3: rgb(40, 23, 54); /* Deep Purple */
 $primary-color-4: rgb(204, 184, 103); /* Mustard */
@@ -16,3 +16,16 @@ $primary-color-6: rgb(194, 113, 34); /* Orange */
 $primary-color-7: rgb(156, 191, 80); /* Lime Green */
 
 $primary-color-8: rgba(184, 1, 89, 0.8); /* Transluscent vibrant pink */
+
+/* Coolors Exported Palette - coolors.co/88d18a-ccddb7-6a5b6e-f0b7b3-a833b9 */
+
+$color1: #88d18a; //rgba(136, 209, 138, 100) vibid green
+$color1-a: rgba(136, 209, 138, 0.8);
+$color2: #ccddb7; //rgba(204, 221, 183, 100) light green
+$color2-a: rgba(204, 221, 183, 0.8);
+$color3: #6a5b6e; //rgba(106, 91, 110, 100) eggplant
+$color3-a: rgba(106, 91, 110, 0.8);
+$color4: #f0b7b3; //rgba(240, 183, 179, 100) salmon
+$color4-a: rgba(240, 183, 179, 0.8);
+$color5: #a833b9; //rgba(168, 51, 185, 100) violet
+$color5-a: rgba(168, 51, 185, 0.9);
