--- a/violetaestudio_2015-5.5.2/css/styles.scss
+++ b/violetaestudio_2015-5.5.2/css/styles.scss
@@ -15,7 +15,13 @@ body {
   font-weight: 100;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6 {
+  font-family: $font-stack;
+  font-weight: 300;
+  padding-left: 0.5rem;
+}
+
+p {
   font-family: $font-stack;
   font-weight: 300;
 }
@@ -142,7 +148,6 @@ h1, h2, h3, h4, h5, h6, p {
   }
   h1, p {
     color: $main-color-2;
-    padding-left: 0.5rem;
   }
   #trigger-overlay {
     cursor: pointer;
@@ -166,6 +171,7 @@ h1, h2, h3, h4, h5, h6, p {
 blockquote {
   font-size: 2rem;
   border-left: none;
+  margin: 0;
   p {
     font-size: 2rem;
     border-left: none;
