--- a/violetaestudio_2015-5.5.2/css/colors.scss
+++ b/violetaestudio_2015-5.5.2/css/colors.scss
@@ -3,9 +3,10 @@
 $main-color-1: rgb(0,0,0); /* Black */
 $main-color-2: rgb(250, 250, 250); /* Almost white */
 $main-color-3: rgb(80,78,87); /* Gray */
-$main-color-4: rgba(0, 0, 0, 0.45); /* Transluscent black */
+$main-color-4: rgba(0, 0, 0, 0.75); /* Transluscent black */
 $main-color-5: rgba(255, 255, 255, 0.9); /* Transluscent white */
 $main-color-6: rgb(240, 240, 240); /* Very light gray */
+$main-color-7: rgba(0, 0, 0, 0.45); /* Lighter transluscent black for nav scrolling */
 
 $primary-color-1: #b30000; /* Nice red for errors */
 $primary-color-2: rgb(184, 1, 89); /* Vibrant Pink */
