--- a/violetaestudio_2015-5.5.2/css/styles.css
+++ b/violetaestudio_2015-5.5.2/css/styles.css
@@ -6,7 +6,7 @@
 /* Transluscent black */
 /* Transluscent white */
 /* Very light gray */
-/* Vibrant Violet */
+/* Nice red for errors */
 /* Vibrant Pink */
 /* Deep Purple */
 /* Mustard */
@@ -14,6 +14,7 @@
 /* Orange */
 /* Lime Green */
 /* Transluscent vibrant pink */
+/* Coolors Exported Palette - coolors.co/88d18a-ccddb7-6a5b6e-f0b7b3-a833b9 */
 /* Custom fonts */
 /* latin */
 @font-face {
@@ -36,18 +37,86 @@
   font-weight: 700;
   src: local("Nunito-Bold"), url(http://fonts.gstatic.com/s/nunito/v7/TttUCfJ272GBgSKaOaD7KpBw1xU1rKptJj_0jans920.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+/* devanagari */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 100;
+  src: local("Yantramanav Thin"), local("Yantramanav-Thin"), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wLIUjMgeEa0akjNnRDJ5OSA.woff2) format("woff2");
+  unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB; }
+/* latin-ext */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 100;
+  src: local("Yantramanav Thin"), local("Yantramanav-Thin"), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wF19lPr_M5u0SZOsLIZJNh8.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 100;
+  src: local("Yantramanav Thin"), local("Yantramanav-Thin"), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wNKT0E3VAiFQm6Fsw40EoXw.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+/* devanagari */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Yantramanav Light"), local("Yantramanav-Light"), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bGL7gfUuvpSx2m1LFFgjvxY.woff2) format("woff2");
+  unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB; }
+/* latin-ext */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Yantramanav Light"), local("Yantramanav-Light"), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNDnm4qiMZlH5rhYv_7LI2Y.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Yantramanav Light"), local("Yantramanav-Light"), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNTIkQYohD4BpHvJ3NvbHoA.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+/* devanagari */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Yantramanav"), local("Yantramanav-Regular"), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Pkqa6bqz2MWWNAbes-nCbE.woff2) format("woff2");
+  unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB; }
+/* latin-ext */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Yantramanav"), local("Yantramanav-Regular"), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7KE8kM4xWR1_1bYURRojRGc.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Yantramanav';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Yantramanav"), local("Yantramanav-Regular"), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Igp9Q8gbYrhqGlRav_IXfk.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
 html, button, input, select, textarea {
   font-family: sans-serif;
-  font-family: "Nunito", sans-serif;
+  font-family: "Yantramanav", sans-serif;
   font-weight: 300; }
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
-  font-weight: 300; }
+  font-family: "Yantramanav", sans-serif;
+  font-weight: 100; }
 
-h1, h2, h3, h4, h5, h6, p {
-  font-family: "Nunito", sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Yantramanav", sans-serif;
+  font-weight: 300;
+  padding-left: 0.5rem; }
+
+p {
+  font-family: "Yantramanav", sans-serif;
   font-weight: 300; }
 
 /* Overlay style */
@@ -57,14 +126,14 @@ h1, h2, h3, h4, h5, h6, p {
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(153, 32, 144, 0.9);
+  background: rgba(168, 51, 185, 0.9);
   z-index: 3; }
   .overlay .overlay-close {
-    width: 80px;
-    height: 80px;
+    width: 5rem;
+    height: 5rem;
     position: absolute;
-    right: 20px;
-    top: 20px;
+    right: 1.25rem;
+    top: 1.25rem;
     overflow: hidden;
     border: none;
     background: url(../img/cross.png) no-repeat center center;
@@ -90,13 +159,15 @@ h1, h2, h3, h4, h5, h6, p {
       display: block;
       height: 20%;
       height: calc(100% / 5);
-      min-height: 54px;
+      min-height: 3.375rem;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden; }
       .overlay ul li a {
-        font-size: 54px;
-        font-weight: 300;
+        font-family: "Yantramanav", sans-serif;
+        font-size: 3.375rem;
+        font-weight: 100;
         display: block;
+        letter-spacing: 0.3125rem;
         color: #fafafa;
         -webkit-transition: color 0.2s;
         transition: color 0.2s; }
@@ -140,15 +211,20 @@ h1, h2, h3, h4, h5, h6, p {
 #home {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.45);
-  z-index: 2; }
+  z-index: 2;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.3); }
   #home p {
     font-size: 2.75rem;
     margin-bottom: 0; }
   #home h1, #home p {
-    color: #fafafa;
-    padding-left: 0.5rem; }
+    color: #fafafa; }
   #home #trigger-overlay {
     cursor: pointer; }
+
+header#home.scrolling h1 {
+  font-size: 1.75rem; }
+header#home.scrolling p {
+  font-size: 1.75rem; }
 
 .texture-overlay {
   position: absolute;
@@ -164,7 +240,8 @@ h1, h2, h3, h4, h5, h6, p {
 
 blockquote {
   font-size: 2rem;
-  border-left: none; }
+  border-left: none;
+  margin: 0; }
   blockquote p {
     font-size: 2rem;
     border-left: none; }
@@ -172,14 +249,14 @@ blockquote {
     color: black;
     content: "\201C";
     display: inline-block;
-    font-family: "Nunito", sans-serif;
+    font-family: "Yantramanav", sans-serif;
     font-size: 4rem;
     vertical-align: middle; }
   blockquote:after {
     color: black;
     content: "\201D";
     display: inline-block;
-    font-family: "Nunito", sans-serif;
+    font-family: "Yantramanav", sans-serif;
     font-size: 4rem;
     vertical-align: middle; }
 
@@ -197,29 +274,30 @@ blockquote {
   color: #fafafa; }
 .me button {
   background-color: #fafafa;
-  color: #b80159;
+  color: #a833b9;
   border: 2px solid #fafafa;
-  margin-right: 3rem; }
+  margin-right: 3rem;
+  font-size: 1.125rem; }
   .me button:hover {
     background-color: transparent;
     color: #fafafa;
-    border: 2px solid #b80159; }
+    border: 2px solid #a833b9; }
 
 #about {
   background-color: #282b2a; }
   #about .formation {
-    background: #FEFEFE url("../img/web.jpg") no-repeat center center;
+    background: #FEFEFE url("../img/muestra.jpg") no-repeat center center;
     background-size: cover;
     min-height: 100vh; }
 
 #skills {
   position: relative;
-  background: #E8E0DA url("../img/ux.jpg") no-repeat center center fixed;
+  background: #E8E0DA url("../img/duis.jpg") no-repeat center center fixed;
   background-size: cover; }
 
 #experience {
   position: relative;
-  background: #FEFEFE url("../img/ux1.jpg") no-repeat center center;
+  background: #FEFEFE url("../img/violet-hero.jpg") no-repeat center center;
   background-size: cover; }
 
 #contact {
@@ -272,29 +350,30 @@ textarea[type="text"]:focus {
 [data-abide] .error small.error, [data-abide] .error span.error {
   font-size: 1rem;
   font-style: italic;
-  background: #8b1820;
-  color: darkviolet; }
+  background: #FFCCCC;
+  color: #b30000; }
 [data-abide] span.error, [data-abide] small.error {
   font-size: 1rem;
   font-style: italic;
-  background: #8b1820;
-  color: darkviolet; }
+  background: #FFCCCC;
+  color: #b30000; }
 
 .error label {
-  color: #8b1820; }
+  color: #b30000; }
   .error label.error {
-    color: #8b1820; }
+    color: #b30000; }
 
 p.success {
   font-size: 1.5rem;
-  color: #b80159;
+  color: #88d18a;
   padding: 1rem; }
 
 footer {
   padding-bottom: 0.5rem;
   position: fixed;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.45); }
+  background-color: rgba(255, 255, 255, 0.85);
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.3); }
   footer section p:last-child {
     text-align: center; }
   footer p {
@@ -309,7 +388,7 @@ footer {
   filter: url("../index.html#goo"); }
 
 .share-button, .share-toggle-button {
-  background-color: #9cbf50 !important;
+  background-color: #a833b9 !important;
   padding: 0;
   position: absolute;
   display: inline-block;
@@ -338,7 +417,7 @@ footer {
   color: #222222; }
 
 a.share-button {
-  background-color: rgba(184, 1, 89, 0.8) !important;
+  background-color: #88d18a !important;
   color: #fafafa; }
   a.share-button:hover, a.share-button:focus {
     color: #dfd7d7; }
