--- a/violetaestudio_2015-5.5.2/css/styles.scss
+++ b/violetaestudio_2015-5.5.2/css/styles.scss
@@ -373,6 +373,13 @@ p.success {
 }
 
 footer {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  visibility: hidden;
+  opacity: 0;
+  transition:visibility 0s linear 0.5s,opacity 0.5s linear;
   section p:last-child {
     text-align: center;
   }
@@ -381,6 +388,15 @@ footer {
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.85);
   box-shadow: 0 0 7px rgba(0,0,0,0.3);
+  &.visible {
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    visibility: visible;
+    opacity:1;
+    transition-delay:0s;
+  }
   p {
     margin-bottom:0;
   }
