--- a/violetaestudio_2015-5.5.2/css/colors.scss
+++ b/violetaestudio_2015-5.5.2/css/colors.scss
@@ -1,24 +1,24 @@
-/* Colors */
+// Colors
 
-$main-color-1: rgb(0,0,0); /* Black */
-$main-color-2: rgb(250, 250, 250); /* Almost white */
-$main-color-3: rgb(80,78,87); /* Gray */
-$main-color-4: rgba(0, 0, 0, 0.75); /* Transluscent black */
-$main-color-5: rgba(255, 255, 255, 0.9); /* Transluscent white */
-$main-color-6: rgb(240, 240, 240); /* Very light gray */
-$main-color-7: rgba(0, 0, 0, 0.45); /* Lighter transluscent black for nav scrolling */
+$main-color-1: rgb(0,0,0); // Black 
+$main-color-2: rgb(250, 250, 250); // Almost white 
+$main-color-3: rgb(80,78,87); // Gray 
+$main-color-4: rgba(0, 0, 0, 0.75); // Transluscent black 
+$main-color-5: rgba(255, 255, 255, 0.9); // Transluscent white 
+$main-color-6: rgb(240, 240, 240); // Very light gray 
+$main-color-7: rgba(0, 0, 0, 0.45); // Lighter transluscent black for nav scrolling 
 
-$primary-color-1: #b30000; /* Nice red for errors */
-$primary-color-2: rgb(184, 1, 89); /* Vibrant Pink */
-$primary-color-3: rgb(40, 23, 54); /* Deep Purple */
-$primary-color-4: rgb(204, 184, 103); /* Mustard */
-$primary-color-5: rgba(153, 32, 144, 0.9); /* Transluscent Bubble Gum 2 */
-$primary-color-6: rgb(194, 113, 34); /* Orange */
-$primary-color-7: rgb(156, 191, 80); /* Lime Green */
+$primary-color-1: #b30000; // Nice red for errors 
+$primary-color-2: rgb(184, 1, 89); // Vibrant Pink 
+$primary-color-3: rgb(40, 23, 54); // Deep Purple 
+$primary-color-4: rgb(204, 184, 103); // Mustard 
+$primary-color-5: rgba(153, 32, 144, 0.9); // Transluscent Bubble Gum 2 
+$primary-color-6: rgb(194, 113, 34); // Orange 
+$primary-color-7: rgb(156, 191, 80); // Lime Green 
 
-$primary-color-8: rgba(184, 1, 89, 0.8); /* Transluscent vibrant pink */
+$primary-color-8: rgba(184, 1, 89, 0.8); // Transluscent vibrant pink 
 
-/* Coolors Exported Palette - coolors.co/88d18a-ccddb7-6a5b6e-f0b7b3-a833b9 */
+// Coolors Exported Palette - coolors.co/88d18a-ccddb7-6a5b6e-f0b7b3-a833b9 
 
 $color1: #88d18a; //rgba(136, 209, 138, 100) vibid green
 $color1-a: rgba(136, 209, 138, 0.8);
