--- a/violetaestudio_2015-5.5.2/css/fonts.scss
+++ b/violetaestudio_2015-5.5.2/css/fonts.scss
@@ -1,6 +1,6 @@
-/* Custom fonts */
+// Custom fonts
 
-/* latin */
+// latin 
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
@@ -10,7 +10,7 @@
 }
 
 
-/* latin */
+// latin 
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
@@ -20,7 +20,7 @@
 }
 
 
-/* latin */
+// latin 
 @font-face {
   font-family: 'Nunito';
   font-style: normal;
@@ -29,7 +29,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* devanagari */
+// devanagari 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -37,7 +37,7 @@
   src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wLIUjMgeEa0akjNnRDJ5OSA.woff2) format('woff2');
   unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
-/* latin-ext */
+// latin-ext 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -45,7 +45,7 @@
   src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wF19lPr_M5u0SZOsLIZJNh8.woff2) format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
-/* latin */
+// latin 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -53,7 +53,7 @@
   src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wNKT0E3VAiFQm6Fsw40EoXw.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-/* devanagari */
+// devanagari 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -61,7 +61,7 @@
   src: local('Yantramanav Light'), local('Yantramanav-Light'), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bGL7gfUuvpSx2m1LFFgjvxY.woff2) format('woff2');
   unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
-/* latin-ext */
+// latin-ext 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -69,7 +69,7 @@
   src: local('Yantramanav Light'), local('Yantramanav-Light'), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNDnm4qiMZlH5rhYv_7LI2Y.woff2) format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
-/* latin */
+// latin 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -77,7 +77,7 @@
   src: local('Yantramanav Light'), local('Yantramanav-Light'), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNTIkQYohD4BpHvJ3NvbHoA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-/* devanagari */
+// devanagari 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -85,7 +85,7 @@
   src: local('Yantramanav'), local('Yantramanav-Regular'), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Pkqa6bqz2MWWNAbes-nCbE.woff2) format('woff2');
   unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
-/* latin-ext */
+// latin-ext 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
@@ -93,7 +93,7 @@
   src: local('Yantramanav'), local('Yantramanav-Regular'), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7KE8kM4xWR1_1bYURRojRGc.woff2) format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
-/* latin */
+// latin 
 @font-face {
   font-family: 'Yantramanav';
   font-style: normal;
