--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -3,23 +3,91 @@ body {
 }
 
 nav{
-	background-color: $third-color !important;
-	border: 1px solid $third-color;
+	background-color: $fourth-color !important;
+	border: 1px solid $fourth-color;
+	-moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+	-webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+	box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
+	z-index: 999999;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	left: 0;
 	a{
 		display: block;
 		padding: rem-calc(15);
 		text-align: center;
 		color: $white;
+		font-size: rem-calc(19);
 		&:hover, &:focus, &:active{
 			background-color: $white;
-			color: $third-color;
+			color: $fifth-color;
 		}
 	}
 }
 
 section {
 	&.hero{
-		margin-bottom: rem-calc(15);
+		margin-top: rem-calc(60);
+		.hero-content{
+			position: absolute;
+			top: 33%;
+			left: 0;
+			right: 0;
+			width: 50%;
+			z-index: 2;
+			text-align: center;
+			color: $white;
+			background: rgba(0,0,0,0.55);
+			padding: rem-calc(25);
+			-moz-box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.76);
+			-webkit-box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.76);
+			box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.76);
+			h1, h2{
+				font-size: rem-calc(31);
+				letter-spacing: rem-calc(2);
+			}
+				p{
+				margin: rem-calc(19) 0;
+				font-size: rem-calc(23);
+			}
+		}
+		article{
+			max-width: $global-width;
+			margin: 0 auto;
+		}
+		div{
+			color: $white;
+			//max-width: $global-width;
+			margin: 0 auto;
+		}
+		&#home{
+			position: relative;
+		  height: rem-calc(975);
+		  overflow: hidden;
+		}
+		#parallax-bg {
+		  position: absolute;
+		  width: 100%;
+		  height: 100vh;
+		  top: 0;
+		  bottom: 0;
+		  background: url('/img/hero-banner.jpg') 50% 0 no-repeat;
+		  background-size: cover;
+		  opacity: 0.85;
+		}
+	}
+
+	&.tools, &.resume, &.education, &.skills, &.portfolio, &.contact{
+		padding: rem-calc(15) 0;
+		h3{
+			font-size: rem-calc(25);
+			letter-spacing: rem-calc(2);
+		}
+	}
+	&.tools{
+		margin-top: rem-calc(25);
+		margin-bottom: rem-calc(25);
 		text-align: center;
 		position: relative;
 		overflow: hidden;
@@ -41,15 +109,13 @@ section {
 			z-index: -1;
 		}
 	}
-	&.welcome{
-		h1, h2{
-			font-size: rem-calc(31);
-		}
-	}
 	&.resume{
 
 	}
 	&.education{
+
+	}
+	&.skills{
 
 	}
 	&.portfolio{
@@ -61,7 +127,13 @@ section {
 }
 
 footer{
-	
+	background-color: $secondary-color;
+	padding: rem-calc(15) 0;
+	div{
+			color: $white;
+			max-width: $global-width;
+			margin: 0 auto;
+		}
 }
 
 @media screen and (width: 48em) and (orientation: portrait){
