--- a/F6-resume-02-2016/css/app.css
+++ b/F6-resume-02-2016/css/app.css
@@ -47,6 +47,48 @@
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Lato Light"), local("Lato-Light"), url(https://fonts.gstatic.com/s/lato/v11/IY9HZVvI1cMoAHxvl0w9LVKPGs1ZzpMvnHX-7fPOuAc.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local("Lato Light"), local("Lato-Light"), url(https://fonts.gstatic.com/s/lato/v11/22JRxvfANxSmnAhzbFH8PgLUuEpTyoUstqEm5AMlJo4.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Lato Regular"), local("Lato-Regular"), url(https://fonts.gstatic.com/s/lato/v11/8qcEw_nrk_5HEcCpYdJu8BTbgVql8nDJpwnrE27mub0.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Lato Regular"), local("Lato-Regular"), url(https://fonts.gstatic.com/s/lato/v11/MDadn8DQ_3oT6kvnUq_2r_esZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 700;
+  src: local("Lato Bold Italic"), local("Lato-BoldItalic"), url(https://fonts.gstatic.com/s/lato/v11/AcvTq8Q0lyKKNxRlL28Rn4X0hVgzZQUfRDuZrPvH3D8.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF; }
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 700;
+  src: local("Lato Bold Italic"), local("Lato-BoldItalic"), url(https://fonts.gstatic.com/s/lato/v11/HkF_qI1x_noxlxhrhMQYEJBw1xU1rKptJj_0jans920.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+
 /**
  * Foundation for Sites by ZURB
  * Version 6.1.2
@@ -501,6 +543,9 @@
 
 .long-delay {
   animation-delay: 700ms !important; }
+
+.strong {
+  font-weight: 700; }
 
 .fsz10 {
   font-size: 0.625rem; }
@@ -1992,8 +2037,9 @@
   padding-right: 1.875rem; }
 
 nav {
-  background-color: #2980B9 !important;
-  border: 1px solid #2980B9;
+  background-color: #3E606F !important;
+  border: 1px solid #3E606F;
+  border-top: none;
   -moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
   -webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
   box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.16);
@@ -2007,14 +2053,18 @@ nav {
     padding: 0.9375rem;
     text-align: center;
     color: #ECF0F1;
-    font-size: 1.1875rem; }
+    font-size: 1.3125rem; }
     nav a:hover, nav a:focus, nav a:active {
       background-color: #ECF0F1;
-      color: #3498B8; }
+      color: #193441; }
+
+section h3, section h4, section h5, section h6 {
+  font-family: 'montserratregular'; }
 
 section.hero {
   margin-top: 3.75rem; }
   section.hero .hero-content {
+    text-align: center;
     position: absolute;
     top: 20%;
     left: 0;
@@ -2022,17 +2072,48 @@ section.hero {
     width: 50%;
     z-index: 2;
     color: #ECF0F1;
-    background: rgba(0, 0, 0, 0.55);
-    padding: 1.5625rem;
-    -moz-box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.76);
-    -webkit-box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.76);
-    box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.76); }
+    background: rgba(0, 0, 0, 0.69);
+    padding: 0 0 0.9375rem;
+    -moz-box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.86);
+    -webkit-box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.86);
+    box-shadow: 0 3px 3px 0px rgba(0, 0, 0, 0.86); }
     section.hero .hero-content h1, section.hero .hero-content h2 {
-      font-size: 1.9375rem;
-      letter-spacing: 0.125rem; }
+      letter-spacing: 0.125rem;
+      text-align: center; }
+    section.hero .hero-content h1 {
+      border: 5px solid #ECF0F1;
+      padding: 0.9375rem;
+      font-family: 'montserratextra_bold', sans-serif;
+      font-size: 2.125rem;
+      margin: 0.9375rem 0; }
+    section.hero .hero-content h2 {
+      font-family: 'montserratsemi_bold', sans-serif;
+      font-size: 1.75rem; }
     section.hero .hero-content p {
       margin: 1.1875rem 0;
       font-size: 1.4375rem; }
+    section.hero .hero-content .b1, section.hero .hero-content .b2, section.hero .hero-content .b3, section.hero .hero-content .b4, section.hero .hero-content .b5, section.hero .hero-content .b6 {
+      height: 0.625rem;
+      margin-bottom: 0.9375rem; }
+    section.hero .hero-content .b1 {
+      background-color: #FCFFF5; }
+    section.hero .hero-content .b2 {
+      background-color: #D1DBBD; }
+    section.hero .hero-content .b3 {
+      background-color: #91AA9D; }
+    section.hero .hero-content .b4 {
+      background-color: #3E606F; }
+    section.hero .hero-content .b5 {
+      background-color: #193441; }
+    section.hero .hero-content .b6 {
+      background-color: #ECF0F1; }
+    section.hero .hero-content .hollow {
+      border: 2px solid #ECF0F1;
+      color: #ECF0F1; }
+      section.hero .hero-content .hollow:hover {
+        border: 2px solid #D1DBBD;
+        background-color: #D1DBBD;
+        color: #193441; }
   section.hero article {
     max-width: 77.5rem;
     margin: 0 auto; }
@@ -2053,11 +2134,16 @@ section.hero {
     background-size: cover;
     opacity: 0.85; }
 
-section.tools, section.resume, section.education, section.skills, section.portfolio, section.contact {
+section.resume, section.skills, section.education, section.tools, section.portfolio, section.contact {
   padding: 0.9375rem 0; }
-  section.tools h3, section.resume h3, section.education h3, section.skills h3, section.portfolio h3, section.contact h3 {
+  section.resume h3, section.skills h3, section.education h3, section.tools h3, section.portfolio h3, section.contact h3 {
     font-size: 1.5625rem;
     letter-spacing: 0.125rem; }
+
+section.education article {
+  border-bottom: 1px solid #cacaca;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem; }
 
 section.tools {
   margin-top: 1.5625rem;
@@ -2081,8 +2167,24 @@ section.tools {
     opacity: 0.76;
     z-index: -1; }
 
+section.portfolio img {
+  opacity: 0.5;
+  transition: all 0.5s; }
+  section.portfolio img:hover {
+    opacity: 1; }
+
+section.contact .submit {
+  min-width: 9.375rem;
+  background-color: #91AA9D;
+  border: 2px solid #91AA9D;
+  color: #ECF0F1; }
+  section.contact .submit:hover {
+    background-color: #ECF0F1;
+    color: #91AA9D;
+    border: 2px solid #91AA9D; }
+
 footer {
-  background-color: #468966;
+  background-color: #193441;
   padding: 0.9375rem 0; }
   footer div {
     color: #ECF0F1;
@@ -2094,8 +2196,27 @@ footer {
     height: 50vh; } }
 
 @media screen and (min-width: 0em) and (max-width: 39.9375em) {
-  #menu {
-    display: none !important; } }
+  #menu, #IN-widget {
+    display: none !important; }
+  section {
+    padding: 0 0.3125rem !important; }
+    section.hero {
+      margin-top: 0;
+      padding: 0 !important; }
+      section.hero .hero-content {
+        width: 95%;
+        top: 5%; }
+        section.hero .hero-content h1 {
+          font-size: 1.5rem; }
+        section.hero .hero-content h2 {
+          font-size: 1.125rem; }
+        section.hero .hero-content p {
+          font-size: 0.9375rem; }
+      section.hero#home {
+        height: 100vh; }
+    section.tools {
+      margin-top: 0.3125rem;
+      margin-bottom: 0.3125rem; } }
 
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 /**
@@ -2468,8 +2589,8 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "montserratlight", Helvetica, Arial, sans-serif;
-  font-weight: normal;
+  font-family: -apple-system, "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   line-height: 1.5;
   color: #0a0a0a;
   background: #ECF0F1;
@@ -3667,13 +3788,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "montserratlight", Helvetica, Arial, sans-serif;
-  font-weight: normal;
+  font-family: -apple-system, "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   font-style: normal;
   color: inherit;
   text-rendering: optimizeLegibility;
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
   line-height: 1.4; }
   h1 small,
   h2 small,
@@ -3785,7 +3906,7 @@ abbr {
 
 code {
   font-family: Consolas, "Liberation Mono", Courier, monospace;
-  font-weight: normal;
+  font-weight: 400;
   color: #0a0a0a;
   background-color: #e6e6e6;
   border: 1px solid #cacaca;
@@ -3801,7 +3922,7 @@ kbd {
 .subheader {
   margin-top: 0.2rem;
   margin-bottom: 0.5rem;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1.4;
   color: #8a8a8a; }
 
@@ -3922,13 +4043,13 @@ kbd {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #2C3E50;
-  color: #fff; }
+  background-color: #FCFFF5;
+  color: #193441; }
   [data-whatinput='mouse'] .button {
     outline: 0; }
   .button:hover, .button:focus {
-    background-color: #253544;
-    color: #fff; }
+    background-color: #e6ffaa;
+    color: #193441; }
   .button.tiny {
     font-size: 0.6rem; }
   .button.small {
@@ -3942,34 +4063,34 @@ kbd {
     margin-right: 0; }
   .button.primary {
     background-color: #2C3E50;
-    color: #fff; }
+    color: #193441; }
     .button.primary:hover, .button.primary:focus {
       background-color: #233240;
-      color: #fff; }
+      color: #193441; }
   .button.secondary {
-    background-color: #468966;
-    color: #fff; }
+    background-color: #777;
+    color: #193441; }
     .button.secondary:hover, .button.secondary:focus {
-      background-color: #386e52;
-      color: #fff; }
+      background-color: #5f5f5f;
+      color: #193441; }
   .button.success {
     background-color: #3adb76;
-    color: #fff; }
+    color: #193441; }
     .button.success:hover, .button.success:focus {
       background-color: #22bb5b;
-      color: #fff; }
+      color: #193441; }
   .button.alert {
     background-color: #ec5840;
-    color: #fff; }
+    color: #193441; }
     .button.alert:hover, .button.alert:focus {
       background-color: #da3116;
-      color: #fff; }
+      color: #193441; }
   .button.warning {
     background-color: #ffae00;
-    color: #fff; }
+    color: #193441; }
     .button.warning:hover, .button.warning:focus {
       background-color: #cc8b00;
-      color: #fff; }
+      color: #193441; }
   .button.hollow {
     border: 1px solid #2C3E50;
     color: #2C3E50; }
@@ -3985,11 +4106,11 @@ kbd {
         border-color: #161f28;
         color: #161f28; }
     .button.hollow.secondary {
-      border: 1px solid #468966;
-      color: #468966; }
+      border: 1px solid #777;
+      color: #777; }
       .button.hollow.secondary:hover, .button.hollow.secondary:focus {
-        border-color: #234533;
-        color: #234533; }
+        border-color: #3c3c3c;
+        color: #3c3c3c; }
     .button.hollow.success {
       border: 1px solid #3adb76;
       color: #3adb76; }
@@ -4101,7 +4222,7 @@ label {
   display: block;
   margin: 0;
   font-size: 0.875rem;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1.8;
   color: #0a0a0a; }
   label.middle {
@@ -4388,7 +4509,7 @@ select {
   background: #2C3E50;
   color: #ECF0F1; }
   .badge.secondary {
-    background: #468966;
+    background: #777;
     color: #ECF0F1; }
   .badge.success {
     background: #3adb76;
@@ -4464,10 +4585,10 @@ select {
       background-color: #233240;
       color: #ECF0F1; }
   .button-group.secondary .button {
-    background-color: #468966;
+    background-color: #777;
     color: #ECF0F1; }
     .button-group.secondary .button:hover, .button-group.secondary .button:focus {
-      background-color: #386e52;
+      background-color: #5f5f5f;
       color: #ECF0F1; }
   .button-group.success .button {
     background-color: #3adb76;
@@ -4518,7 +4639,7 @@ select {
   .callout.primary {
     background-color: #dae2ea; }
   .callout.secondary {
-    background-color: #e1f0e8; }
+    background-color: #ebebeb; }
   .callout.success {
     background-color: #e1faea; }
   .callout.alert {
@@ -4747,7 +4868,7 @@ select {
   background: #2C3E50;
   color: #ECF0F1; }
   .label.secondary {
-    background: #468966;
+    background: #777;
     color: #ECF0F1; }
   .label.success {
     background: #3adb76;
@@ -5081,7 +5202,7 @@ body {
   .progress.primary .progress-meter {
     background-color: #2C3E50; }
   .progress.secondary .progress-meter {
-    background-color: #468966; }
+    background-color: #777; }
   .progress.success .progress-meter {
     background-color: #3adb76; }
   .progress.alert .progress-meter {
